--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
-    "gulp-htmlmin": "^5.0.1",
+    "gulp-html-minifier-terser": "^6.0.1",
     "gulp-jsonminify": "^1.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
